--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <div class="check-list-nav-container">
                         <button id="Automated Void-nav" class="listnav-btn">Automated Void</button>
                         <button id="Automated Exchange-nav" class="listnav-btn">Automated Exchange</button>
-                        <button id="Automated Cancel-nav" class="listnav-btn">Automated Exchange</button>
+                        <button id="Automated Cancel-nav" class="listnav-btn">Automated Cancel</button>
                         <button id="Manual Void-nav" class="listnav-btn active">Manual Void</button>
                         <button id="Manual Partial Exchange-nav" class="listnav-btn">Manual Partial Exchange</button>
                         <button id="Manual Unused Exchange-nav" class="listnav-btn">Manual Unused Exchange</button>
